--- a/vue/gabarit/style.css
+++ b/vue/gabarit/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(242, 249, 250);
+    background-color: rgb(242, 250, 250);
 }
 legend{
     font-family:Arial, Helvetica, sans-serif;
@@ -23,12 +23,10 @@ li{
 }
 label{
     display: inline-block;
-    /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;*/
-    /*float: left;*/
     clear: left;
     width: 100px;
     text-align: right;
-    background-color: rgb(141, 212, 207);
+    background-color: rgb(112, 172, 161);
     border-style:solid;
     border-width: 1px;
     border-radius:5px;
@@ -37,7 +35,6 @@ label{
 }
 input{
     display: inline-block;
-    /*float: left;*/
     background-color: white;
     border-radius: 5px;
 }
@@ -46,6 +43,18 @@ input[type="submit"]{
     background-color: rgb(61, 61, 61);
     color:white;
 }
+input[type="reset"]{
+    background-color: rgb(61, 61, 61);
+    color:white;
+
+}
+input[type="button"]{
+    background-color: rgb(61, 61, 61);
+    color:white;
+
+}
+
+
 fieldset{
     background-color: rgb(226, 248, 252);
    
